# diluri

./: .gitignore  .gitmodules  README.md  pyproject.toml
assets/robots/franka_fr3/: README.md
configs/env/: dual_fr3.yaml
configs/policy/: diffusion.yaml
scripts/: collect.py  eval.py  train.py  visualize.py
src/diluri_sim/: __init__.py  config.py
src/diluri_sim/dataset/: __init__.py  replay_buffer.py
src/diluri_sim/env/: __init__.py  scene.py
src/diluri_sim/policy/: __init__.py  diffusion.py  network.py  scheduler.py
src/diluri_sim/sim/: __init__.py  controllers.py
tests/: test_config.py
